--- a/source/stylesheets/pages/_team.scss
+++ b/source/stylesheets/pages/_team.scss
@@ -13,7 +13,7 @@
     font-size: 30px;
     font-weight: bolder;
     margin-bottom: 30px;
-
+    margin-top: 0px;
     color: rgba(0,0,0,0.7);
   }
   h2 {
