--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -12,11 +12,6 @@
     <%= favicon_tag 'images/favicon.png' %>
   </head>
   <body>
-    <!-- layouts/layout.erb -->
-    <%= partial "layouts/navbar" %>   <!-- inject layouts/_navbar.html.erb -->
-    <%= yield %>                      <!-- Page content is injected here -->
-    <%= partial "layouts/footer" %>   <!-- inject layouts/_footer.html.erb -->
+    <%= yield %>
   </body>
 </html>
-
-
